--- a/org.jrebirth/showcase/fxml/src/main/java/org/jrebirth/showcase/fxml/ui/included/SubIncluded1.fxml
+++ b/org.jrebirth/showcase/fxml/src/main/java/org/jrebirth/showcase/fxml/ui/included/SubIncluded1.fxml
@@ -3,11 +3,12 @@
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane1" xmlns:fx="http://javafx.com/fxml">
-  <children>
-
-  </children>
+<BorderPane id="BorderPane" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jrebirth.showcase.fxml.ui.included.Sub1Controller">
+	<center>
+		<TextArea fx:id="textArea" prefWidth="400.0" prefHeight="200" wrapText="true" />
+	</center>
 </BorderPane>
