--- a/org.jrebirth/showcase/fxml/src/main/java/org/jrebirth/showcase/fxml/ui/included/SubIncluded2.fxml
+++ b/org.jrebirth/showcase/fxml/src/main/java/org/jrebirth/showcase/fxml/ui/included/SubIncluded2.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane2" xmlns:fx="http://javafx.com/fxml">
-  <children>
-
-  </children>
+<BorderPane id="BorderPane" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jrebirth.showcase.fxml.ui.included.Sub2Controller">
+  <center>
+    <TextArea fx:id="textArea" prefWidth="400.0" prefHeight="200" wrapText="true" />
+  </center>
 </BorderPane>
