Fix mastering tables download link

--- a/org.jrebirth/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth/src/site/xdoc/index.xml.vm
@@ -80,7 +80,7 @@
 					<a href="http://apps.jrebirth.org/lightningtalk/lightningtalk-1.0.0.zip">Lightning Talk</a>
 				</li>
 				<li>
-					<a href="http://apps.jrebirth.org/masteringtables/http://apps.jrebirth.org/masteringtables/masteringtables-1.0.0-SNAPSHOT.zip">Mastering Tables</a>
+					<a href="http://apps.jrebirth.org/masteringtables/masteringtables-1.0.0-SNAPSHOT.zip">Mastering Tables</a>
 				</li>
 			</ul>
 		</div>
