Fix missing version upgrade !!

--- a/org.jrebirth/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth/src/site/xdoc/index.xml.vm
@@ -151,12 +151,13 @@
 			<a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>
 			.
 			</p>
+			<!-- Undone yet
 			<p>
 			<a title="GlobalSign" href="https://www.globalsign.com" target="_blank">Global Sign</a>
 			,
 			for offering us free <a href="https://www.globalsign.com/ssl/">SSL</a> &amp; <a href="https://www.globalsign.com/code-signing/">Code Signing</a> certicates.
 			.
-			</p>
+			</p>-->
 		</div>
 
 	</body>
