--- a/org.jrebirth/src/site/xdoc/apps/Analyzer.xml.vm
+++ b/org.jrebirth/src/site/xdoc/apps/Analyzer.xml.vm
@@ -12,34 +12,32 @@
 <document xmlns="http://maven.apache.org/XDOC/2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
 
 	<properties>
-		<title>JRebirth Showcase - FXML usage</title>
+		<title>JRebirth Analyzer</title>
 		<author>Sébastien Bordes</author>
-		<date>30/07/2013</date>
+		<date>22/02/2013</date>
 	</properties>
 
 	<head>
-
-		<meta name="keywords" lang="Fr" content="JavaFX JRebirth Showcase Undo Redo" />
-		<meta name="keywords" lang="En" content="JavaFX JRebirth Showcase Undo Redo" />
-		<meta name="description" content="JavaFX JRebirth Showcase FXML usage" />
-
+		<meta name="keywords" lang="Fr" content="JavaFX 2 Demo Application Presentation" />
+		<meta name="keywords" lang="En" content="JavaFX 2 Demo Application Presentation" />
+		<meta name="description" content="JavaFx 2 JavaFx 2.0 Demo Application Presentation JRebirth Framework Lightning Talk" />
 	</head>
 	<body>
+
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP_SUBDOMAIN='showcases';
-			var JAVAFX_APP_JNLP='fxml/0.7.5-SNAPSHOT/FXML-Showcase.jnlp';
-			var JAVAFX_APP_WIDTH=800;
-			var JAVAFX_APP_HEIGHT=600;
+			var JAVAFX_APP_JNLP='analyzer/${project.version}/JRebirthAnalyzer.jnlp';
+			var JAVAFX_APP_WIDTH=1024;
+			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
 		<script type="text/javascript" src="../web-files/dtjava.js"></script>
 		<script type="text/javascript" src="../web-files/javafxApp.js"></script>
 
-		<section id="FXML" name="FXML Showcase" title="FXML Showcase">
+		<section id="JRebirthAnalyzer" name="JRebirth Analyzer">
 
-			<div id="catcherTitle">JRebirth Showcase - FXML Usage</div>
-			<div id="catcherContent">Use conveniently FXML files into your JRebirth application</div>
+			<div id="catcherTitle">JRebirth - Application Analyzer</div>
+			<div id="catcherContent">Analyze your log trace to see how JRebirth code engine works</div>
 
-			<p></p>
+			<p>This application can help you to debug your application</p>
 			<p>
 				Require
 				<a href="http://www.oracle.com/technetwork/java/javafx/downloads/index.html">Java 7 with JavaFX 2 Runtime</a>
@@ -48,21 +46,18 @@
 				)
 			</p>
 			<p>
-				<strong>You can launch the application with Java Webstart:</strong>
+				<strong>Launch by Java Webstart:</strong>
 				<a id="launchApp" href="#" title="Launch Application with Java WebStart">Click to launch this application with Java WebStart</a>
-				<br />
 			</p>
 			<p>
-				You can download the whole application here :
-				<a href="http://showcases.jrebirth.org/fxml/fxml-0.7.5-SNASPHOT.zip">FXML Showcase Zip</a>
+				Press F11 to activate fullscreen mode, use left-click to show the next slide, right click for previous slide.
 			</p>
 			<p>
-				You can browse all showcases source code on
-				<a title="JRebirth Showcases Repository" href="https://github.com/JRebirth/JRebirth-Showcase" target="_blank">GitHub JRebirth Showcase repository</a>
+				You can browse the source code on
+				<a title="JRebirth EclipseDay Repository" href="https://github.com/JRebirth/JRebirth/tree/master/org.jrebirth/analyzer" target="_blank">GitHub</a>
 				.
 			</p>
-
-			<div id="javafx-app-placeholder" style="margin: auto; width:800px; padding: 0;">
+			<div id="javafx-app-placeholder" style="margin: 0 -27px; padding: 0;">
 			</div>
 
 		</section>
