--- a/org.jrebirth/src/site/xdoc/showcases/UndoRedo.xml.vm
+++ b/org.jrebirth/src/site/xdoc/showcases/UndoRedo.xml.vm
@@ -27,7 +27,7 @@
 	<body>
 		<script type="text/javascript">//<![CDATA[
 			var JAVAFX_APP_JNLP_SUBDOMAIN='showcases';
-			var JAVAFX_APP_JNLP='undoredo/0.7.5-SNAPSHOT/UndoRedo-Showcase.jnlp';
+			var JAVAFX_APP_JNLP='undoredo/${project.version}/UndoRedo-Showcase.jnlp';
 			var JAVAFX_APP_WIDTH=800;
 			var JAVAFX_APP_HEIGHT=600;
 		//]]></script>
