--- a/org.jrebirth.af/src/site/apt/links.apt.vm
+++ b/org.jrebirth.af/src/site/apt/links.apt.vm
@@ -9,9 +9,9 @@
 Useful links
 
 
-JRebirth provides 2 websites, one for latest development and one for latest stable. 
-The default website (www) is mapped to development version to be more up-to-date than frozen stable release.
-All previous websites are still available for reference.
+ JRebirth provides 2 websites, one for latest development and one for latest stable.<br />
+ The default website (<www>) is mapped to development version to be more up-to-date than frozen <stable> release.<br />
+ All previous websites are still available for reference (<sites>).
 
 
 * All web sites
