--- a/org.jrebirth.af/src/site/xdoc/apps/LightningTalk.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/LightningTalk.xml.vm
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='lightningtalk/1.1.0/LightningTalk.jnlp';
+			var JAVAFX_APP_JNLP='lightningtalk/${lightningtalk.version}/LightningTalk.jnlp';
 			var JAVAFX_APP_WIDTH=1024;
 			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
@@ -54,7 +54,7 @@
 			</p>
 			<p>
 				You can download the whole application here :
-				<a href="http://apps.jrebirth.org/lightningtalk/lightningtalk-1.0.0.zip">Lightning Talk</a>
+				<a href="http://apps.jrebirth.org/lightningtalk/lightningtalk-${lightningtalk.version}.zip">Lightning Talk</a>
 			</p>
 			<p>
 				You can browse the source code on
