--- a/org.jrebirth.af/src/site/xdoc/apps/MasteringTables.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/MasteringTables.xml.vm
@@ -12,34 +12,33 @@
 <document xmlns="http://maven.apache.org/XDOC/2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
 
 	<properties>
-		<title>JRebirth AF Tour</title>
+		<title>Mastering Tables - Game for Kids</title>
 		<author>Sébastien Bordes</author>
-		<date>30/11/2012</date>
+		<date>05/06/2013</date>
 	</properties>
 
 	<head>
 
-		<meta name="keywords" lang="Fr" content="JavaFX 2 Demo Application Presentation" />
-		<meta name="keywords" lang="En" content="JavaFX 2 Demo Application Presentation" />
-		<meta name="description" content="JavaFx 2 JavaFx 2.0 Demo Application Presentation JRebirth Framework Tour" />
+		<meta name="keywords" lang="Fr" content="JavaFX Mind Game Mastering Tables" />
+		<meta name="keywords" lang="En" content="JavaFX Mind Game Mastering Tables" />
+		<meta name="description" content="JavaFX Mind Game Mastering Tables" />
 
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='jaf/1.1.0-SNAPSHOT/JRebirthTour.jnlp';
-			var JAVAFX_APP_WIDTH=1024;
-			var JAVAFX_APP_HEIGHT=768;
+			var JAVAFX_APP_JNLP='masteringtables/${masteringtables.version}/MasteringTables.jnlp';
+			var JAVAFX_APP_WIDTH=800;
+			var JAVAFX_APP_HEIGHT=600;
 		//]]></script>
-		
 		<script type="text/javascript" src="../web-files/dtjava.js"></script>
 		<script type="text/javascript" src="../web-files/javafxApp.js"></script>
 
-		<section id="prez" name="JRebirth Application Framework" title="JRebirth Application Framework">
+		<section id="MasteringTables" name="Mastering Tables Mind Game" title="Mastering Tables Mind Game">
 
-			<div id="catcherTitle">JRebirth Presentation</div>
-			<div id="catcherContent">Discovering JRebirth Features</div>
+			<div id="catcherTitle">Mastering Tables - Game for Kids</div>
+			<div id="catcherContent">Help kids learning their Math Tables</div>
 
-			<p>This application has been shown during Heroes Event at ToulouseJUG</p>
+			<p>This application has been used as Workshop support during EclipseCON France JavaFX workshop</p>
 			<p>
 				Require
 				<a href="http://www.oracle.com/technetwork/java/javafx/downloads/index.html">Java 7 with JavaFX 2 Runtime</a>
@@ -51,19 +50,18 @@
 				<strong>You can launch the application with Java Webstart:</strong>
 				<a id="launchApp" href="#" title="Launch Application with Java WebStart">Click to launch this application with Java WebStart</a>
 				<br />
-				Press F11 to activate fullscreen mode, use left-click to show the next slide (or page down), right click for previous slide (or page up).
 			</p>
 			<p>
 				You can download the whole application here :
-				<a href="http://apps.jrebirth.org/jaf/jaf-1.1.0-SNAPSHOT.zip">JRebirth-Presentation</a>
+				<a href="http://apps.jrebirth.org/masteringtables/masteringtables-${masteringtables.version}.zip">Mastering Tables Game</a>
 			</p>
 			<p>
 				You can browse the source code on
-				<a title="JRebirth Presentation Repository" href="https://github.com/JRebirth/JRebirth-Presentation" target="_blank">GitHub JRebirth-Presentation repository</a>
+				<a title="JRebirth Mastering Tables Repository" href="https://github.com/JRebirth/MasteringTables" target="_blank">GitHub MasteringTables repository</a>
 				.
 			</p>
 
-			<div id="javafx-app-placeholder" style="margin: 0 -27px; padding: 0;">
+			<div id="javafx-app-placeholder" style="margin: auto; width:800px; padding: 0;">
 			</div>
 
 		</section>
