--- a/org.jrebirth.af/src/site/xdoc/apps/EclipseDay.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/EclipseDay.xml.vm
@@ -12,33 +12,33 @@
 <document xmlns="http://maven.apache.org/XDOC/2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
 
 	<properties>
-		<title>Mastering Tables - Game for Kids</title>
+		<title>EclipseDay Toulouse - Use JavaFX with Eclipse</title>
 		<author>Sébastien Bordes</author>
-		<date>05/06/2013</date>
+		<date>16/11/2012</date>
 	</properties>
 
 	<head>
 
-		<meta name="keywords" lang="Fr" content="JavaFX Mind Game Mastering Tables" />
-		<meta name="keywords" lang="En" content="JavaFX Mind Game Mastering Tables" />
-		<meta name="description" content="JavaFX Mind Game Mastering Tables" />
+		<meta name="keywords" lang="Fr" content="JavaFX 2 Demo Application Presentation" />
+		<meta name="keywords" lang="En" content="JavaFX 2 Demo Application Presentation" />
+		<meta name="description" content="JavaFx 2 JavaFx 2.0 Demo Application Presentation JRebirth Framework Lightning Talk" />
 
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='masteringtables/1.1.0/MasteringTables.jnlp';
-			var JAVAFX_APP_WIDTH=800;
-			var JAVAFX_APP_HEIGHT=600;
+			var JAVAFX_APP_JNLP='eclipseday/${eclipseday.version}/EclipseDayToulouse.jnlp';
+			var JAVAFX_APP_WIDTH=1024;
+			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
 		<script type="text/javascript" src="../web-files/dtjava.js"></script>
 		<script type="text/javascript" src="../web-files/javafxApp.js"></script>
 
-		<section id="MasteringTables" name="Mastering Tables Mind Game" title="Mastering Tables Mind Game">
+		<section id="EclipseDay" name="Eclipse Day Toulouse 2012 JavaFX Slides">
 
-			<div id="catcherTitle">Mastering Tables - Game for Kids</div>
-			<div id="catcherContent">Help kids learning their Math Tables</div>
+			<div id="catcherTitle">JRebirth - EclipseDay Toulouse Demo</div>
+			<div id="catcherContent">DogFooding like JavaFX 2 Presentation</div>
 
-			<p>This application has been used as Workshop support during EclipseCON France JavaFX workshop</p>
+			<p>This application has been shown during Eclipse Day Toulouse 2012.</p>
 			<p>
 				Require
 				<a href="http://www.oracle.com/technetwork/java/javafx/downloads/index.html">Java 7 with JavaFX 2 Runtime</a>
@@ -47,21 +47,22 @@
 				)
 			</p>
 			<p>
-				<strong>You can launch the application with Java Webstart:</strong>
+				<strong>Launch by Java Webstart:</strong>
 				<a id="launchApp" href="#" title="Launch Application with Java WebStart">Click to launch this application with Java WebStart</a>
-				<br />
 			</p>
 			<p>
-				You can download the whole application here :
-				<a href="http://apps.jrebirth.org/masteringtables/masteringtables-1.0.0.zip">Mastering Tables Game</a>
-			</p>
-			<p>
+				Press F11 to activate fullscreen mode, use left-click to show the next slide, right click for previous slide
 				You can browse the source code on
-				<a title="JRebirth Mastering Tables Repository" href="https://github.com/JRebirth/MasteringTables" target="_blank">GitHub MasteringTables repository</a>
+				<a title="JRebirth EclipseDay Repository" href="https://github.com/JRebirth/EclipseDay-Presentation" target="_blank">GitHub</a>
 				.
 			</p>
-
-			<div id="javafx-app-placeholder" style="margin: auto; width:800px; padding: 0;">
+			
+			<p>
+				You can download the whole application here :
+				<a href="http://apps.jrebirth.org/eclipseday/eclipseday-${eclipseday.version}.zip">EclipseDay Slides</a>
+			</p>
+			
+			<div id="javafx-app-placeholder" style="margin: 0 -27px; padding: 0;">
 			</div>
 
 		</section>
