--- a/org.jrebirth.af/src/site/xdoc/apps/Breizhcamp.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/Breizhcamp.xml.vm
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='breizhcamp/${breizhcamp.version}-SNAPSHOT/Breizhcamp.jnlp';
+			var JAVAFX_APP_JNLP='breizhcamp/${Breizhcamp-version}-SNAPSHOT/Breizhcamp.jnlp';
 			var JAVAFX_APP_WIDTH=1024;
 			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
@@ -54,7 +54,7 @@
 			</p>
 			<p>
 				You can download the whole application here :
-				<a href="http://apps.jrebirth.org/breizhcamp/javafx2-${breizhcamp.version}.zip">Lightning Talk</a>
+				<a href="http://apps.jrebirth.org/breizhcamp/javafx2-${Breizhcamp-version}.zip">Lightning Talk</a>
 			</p>
 			<p>
 				Press F11 to activate fullscreen mode, use left-click to show the next slide, right click for previous slide
