--- a/org.jrebirth.af/src/site/xdoc/apps/EclipseCON.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/EclipseCON.xml.vm
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='eclipsecon/${eclipsecon.version}/EclipseCON.jnlp';
+			var JAVAFX_APP_JNLP='eclipsecon/${EclipseCON-version}/EclipseCON.jnlp';
 			var JAVAFX_APP_WIDTH=1024;
 			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
@@ -54,7 +54,7 @@
 			</p>
 			<p>
 				You can download the whole application here :
-				<a href="http://apps.jrebirth.org/eclipsecon/eclipsecon-${eclipsecon.version}.zip">EclipseCON Workshop</a>
+				<a href="http://apps.jrebirth.org/eclipsecon/eclipsecon-${EclipseCON-version}.zip">EclipseCON Workshop</a>
 			</p>
 			<p>
 				You can download workshop files (Eclipse Juno + m2eclipse + efxclipse + Maven standalone + Jdk7u21) :
