--- a/org.jrebirth.af/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/index.xml.vm
@@ -52,7 +52,7 @@
 			. By leveraging the best of previous RIA framework, we can deliver the ultimate one to work cleanly and efficiently with this
 			<strong>awesome API</strong>
 			. Check our
-			<a href="doc/overview.html">overview page</a>
+			<a href="doc/Overview.html">overview page</a>
 			to see a diagram illustrating features and layers. Have also a look to
 			<a href="apps/JRebirthTour.html">JRebirth Tour</a> presentation  
             which was built with <strong>JRebirth</strong> presentation engine.
