--- a/org.jrebirth.af/src/site/xdoc/apps/Breizhcamp.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/Breizhcamp.xml.vm
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<script type="text/javascript">//<![CDATA[
-			var JAVAFX_APP_JNLP='breizhcamp/${Breizhcamp-version}-SNAPSHOT/Breizhcamp.jnlp';
+			var JAVAFX_APP_JNLP='breizhcamp/${Breizhcamp-version}/Breizhcamp.jnlp';
 			var JAVAFX_APP_WIDTH=1024;
 			var JAVAFX_APP_HEIGHT=768;
 		//]]></script>
