Improve first web page

--- a/org.jrebirth.af/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/index.xml.vm
@@ -22,7 +22,7 @@
 	<body>
 
 		<div id="catcherTitle">
-			JavaFX
+			Outstanding
 			<br />
 			Application
 			<br />
@@ -117,11 +117,13 @@
 		<!-- id="ohloh" -->
 		<div id="ohloh">
 			<div>
-				<script type="text/javascript" src="http://www.ohloh.net/p/599672/widgets/project_users.js?style=gray"></script>
+				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_users.js?style=blue"></script>
 			</div>
+			<!--
 			<div>
-				<script type="text/javascript" src="http://www.ohloh.net/p/599672/widgets/project_thin_badge.js"></script>
+				<script type="text/javascript" src="http://www.openhub.net/p/599672/widgets/project_thin_badge.js"></script>
 			</div>
+			-->
 			
 			<div id="pp">
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -142,10 +144,9 @@
 			used for Memory &amp; CPU Java profiling with a free license.
 			</p>
 			<p>
-			<a title="Structure 101" href="http://www.structure101.com/" target="_blank">Structure101 guys</a>
+			<a title="Certum" href="http://www.certum.eu/certum/cert,offer_code_signing.xml" target="_blank">Certum</a>
 			,
-			for offering us a free license of
-			<a href="http://structure101.com/products/#/refactor">ReStructure 101</a>
+			for providing Open Source <a href="http://www.certum.eu/certum/cert,offer_en_open_source_cs.xml">Code Signing Certicate</a>.
 			.
 			</p>
 			<p>
@@ -155,13 +156,14 @@
 			<a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>
 			.
 			</p>
-			
 			<p>
-			<a title="GlobalSign" href="https://www.globalsign.com" target="_blank">Global Sign</a>
+			<a title="Structure 101" href="http://www.structure101.com/" target="_blank">Structure101 guys</a>
 			,
-			for offering us free <a href="https://www.globalsign.com/ssl/">SSL</a> &amp; <a href="https://www.globalsign.com/code-signing/">Code Signing</a> certicates.
+			for offering us a free license of
+			<a href="http://structure101.com/products/#/refactor">ReStructure 101</a>
 			.
 			</p>
+			
 		</div>
 
 	</body>
