--- a/org.jrebirth.af/src/site/xdoc/index.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/index.xml.vm
@@ -144,24 +144,18 @@
 			used for Memory &amp; CPU Java profiling with a free license.
 			</p>
 			<p>
-			<a title="Certum" href="http://www.certum.eu/certum/cert,offer_code_signing.xml" target="_blank">Certum</a>
-			,
-			for providing Open Source <a href="http://www.certum.eu/certum/cert,offer_en_open_source_cs.xml">Code Signing Certicate</a>.
-			.
+			<a title="Certum" href="http://www.certum.eu/certum/cert,offer_code_signing.xml" target="_blank">Certum</a>,
+			for offering us an Open Source <a href="http://www.certum.eu/certum/cert,offer_en_open_source_cs.xml">Code Signing Certificate</a>.
 			</p>
 			<p>
-			<a title="Jet Brains" href="http://www.jetbrains.com" target="_blank">Jet Brains</a>
-			,
+			<a title="Jet Brains" href="http://www.jetbrains.com" target="_blank">Jet Brains</a>,
 			for offering us a free license of
-			<a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>
-			.
+			<a href="http://www.jetbrains.com/idea/">IntelliJ IDEA</a>.
 			</p>
 			<p>
-			<a title="Structure 101" href="http://www.structure101.com/" target="_blank">Structure101 guys</a>
-			,
+			<a title="Structure 101" href="http://www.structure101.com/" target="_blank">Structure101 guys</a>,
 			for offering us a free license of
-			<a href="http://structure101.com/products/#/refactor">ReStructure 101</a>
-			.
+			<a href="http://structure101.com/products/#/refactor">ReStructure 101</a>.
 			</p>
 			
 		</div>
