--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/jnlp/template.vm
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/jnlp/template.vm
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<jnlp spec="1.0+" xmlns:jfx="http://javafx.com" href="SampleApplication.jnlp">
-<!-- codebase="http://www.jrebirth.org/sample" -->
+<jnlp spec="1.0+" xmlns:jfx="http://javafx.com" codebase="$jnlpCodebase" href="$outputFile" >
+
 	<information>
-		<title>${project.name}</title>
-		<vendor>Sébastien Bordes</vendor>
-		<homepage href="${project.url}"/>
-		<description>${project.description}</description>
+#if($project.Name)
+		<title>$project.Name</title>
+#end
+#if($project.Organization.Name)
+		<vendor>$project.Organization.Name</vendor>
+#end
+#if($project.Url)
+		<homepage href="$project.Url"/>
+#end
+#if($project.Description)
+		<description>$project.Description</description>
+#end
 		<description kind="short">Sample Application</description>
 		<icon href="http://www.jrebirth.org/uploads/images/JRebirth_32x32.png"/>
+#if($offlineAllowed)
 		<offline-allowed/>
+#end
 	</information>
 
+	
+#if($allPermissions)
 	<security>
 		<all-permissions/>
 	</security>
+#end
 
 	<resources os="Windows" arch="x86">
 		<jfx:javafx-runtime version="2.0+" href="http://download.oracle.com/otn-pub/java/javafx/javafx-windows-i586__Vlatest.exe "/>
@@ -21,15 +34,16 @@
 	<resources os="Windows" arch="x64">
 		<jfx:javafx-runtime version="2.0+" href="http://download.oracle.com/otn-pub/java/javafx/javafx-windows-x64__Vlatest.exe "/>
 	</resources>
-  
-  	<resources>
+
+	<resources>
 		<j2se version="1.7+" />
 		$dependencies
 	</resources>
 	
-	<applet-desc  width="800" height="600" main-class="com.javafx.main.NoJavaFXFallback"  name="${project.name}" />
-	<jfx:javafx-desc  width="800" height="600" main-class="$mainClass"  name="${project.name}" />
+	<application-desc main-class="$mainClass"/>
 	
+	<applet-desc  width="$appletWidth" height="$appletHeight" main-class="com.javafx.main.NoJavaFXFallback"  name="${project.name}" />
+	<jfx:javafx-desc  width="$appletWidth" height="$appletHeight" main-class="$mainClass" name="${project.name}" />
 <!--
 
 	update element: The update element is used to indicate the preferences for how application updates should be handled by the JNLP Client. The update element can contain the following two optional attributes:
@@ -45,5 +59,5 @@
 	A value of "prompt-run" means to ask the user if he/she wants to download and run the updated version, or cancel and abort runing the application.
 
 -->	
-	<update check="timeout" policy="prompt-update">
+	<update check="$updateCheck" policy="$updatePolicy" />
 </jnlp>
