--- a/org.jrebirth.af/src/site/xdoc/apps/MasteringTables.xml.vm
+++ b/org.jrebirth.af/src/site/xdoc/apps/MasteringTables.xml.vm
@@ -39,12 +39,9 @@
 			<div id="catcherContent">Help kids learning their Math Tables</div>
 
 			<p>This application has been used as Workshop support during EclipseCON France JavaFX workshop</p>
-			<p>
+<p>
 				Require
-				<a href="http://www.oracle.com/technetwork/java/javafx/downloads/index.html">Java 7 with JavaFX 2 Runtime</a>
-				(available for windows,
-				<a href="http://www.oracle.com/technetwork/java/javafx/downloads/devpreview-1429449.html">mac and linux since 2.1</a>
-				)
+				<a href="http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html">Java 8 Runtime</a>.
 			</p>
 			<p>
 				<strong>You can launch the application with Java Webstart:</strong>
